--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <button class="key" data-key="eight" data-type="number">8</button>
                 <button class="key" data-key="nine" data-type="number">9</button>
                 <button class="key" data-key="allClear" data-type="operator_t1">AC</button>
-                <button class="key" data-key="signs" data-type="operator_t1">+/-</button>
-                <button class="key" data-key="percent" data-type="operator_t1">%</button>
+                <button class="key" data-key="signs" data-type="number">+/-</button>
+                <button class="key" data-key="percent" data-type="number">%</button>
                 <button class="key" data-key="decimal" data-type="number">.</button>
                 <button class="key" data-key="equal" data-type="equal">=</button>
             </div>
