Add delete button

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 <button class="key" data-key="seven" data-type="number">7</button>
                 <button class="key" data-key="eight" data-type="number">8</button>
                 <button class="key" data-key="nine" data-type="number">9</button>
-                <button class="key" data-key="allClear" data-type="operator_t1">AC</button>
+                <button class="key" data-key="allClear" data-type="allClear">AC</button>
                 <button class="key" data-key="signs" data-type="number">+/-</button>
                 <button class="key" data-key="percent" data-type="number">%</button>
                 <button class="key" data-key="decimal" data-type="number">.</button>
+                <button class="key" data-key="delete" data-type="number">DEL</button>
                 <button class="key" data-key="equal" data-type="equal">=</button>
             </div>
         </div>
